res/examples/invalid/list_expression_with_mismatch_type_identifier_value.eg
let a = "foo";
let b = [1, 2, a];

// out: TypeError: mismatched types: expected type `number` but received `string`